Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,16 +1,13 @@
-#Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID = ""
+BOT_TOKEN = "hahaha"
+GDRIVE_FOLDER_ID = "0AKusWfwnoNCFUk9PVA"
+OWNER_ID = "708150752"
 DOWNLOAD_DIR = "/home/username/mirror-bot/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = "8576655"
+TELEGRAM_HASH = "fdf810d321c321709e7c5bc2553d28d9"
 USE_SERVICE_ACCOUNTS = ""
 
 # Optional config
@@ -21,11 +18,11 @@ SUDO_USERS = ""  #Separated by space
 LOGS_CHATS = "" #Separated by space
 DATABASE_URL = ""
 IGNORE_PENDING_REQUESTS = ""
-INDEX_URL = ""
+INDEX_URL = "http://foevil.tk"
 MEGA_KEY = ""
 MEGA_USERNAME = ""
 MEGA_PASSWORD = ""
-BLOCK_MEGA_LINKS = ""
+BLOCK_MEGA_LINKS = "True"
 SHORTENER = ""
 SHORTENER_API = ""
 STOP_DUPLICATE_CLONE = ""
@@ -36,7 +33,7 @@ RECURSIVE_SEARCH = "" #T/F And Fill drive_folder File Using Driveid.py Script.
 UPTOBOX_TOKEN = "" 
 # View Link button to open file Index Link in browser instead of direct download link
 # You can figure out if it's compatible with your Index code or not, open any video from you Index and check if its URL ends with ?a=view, if yes make it True it will work (Compatible with Bhadoo Drive Index)
-VIEW_LINK = ""
+VIEW_LINK = "True"
 # GDTOT COOKIES
 PHPSESSID = ""
 CRYPT = ""
