--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-BOT_TOKEN = "hahaha"
+BOT_TOKEN = "5193636878:AAFeJRfQ0wYTD3BvRQXzTG3EoNqt1lAZIak"
 GDRIVE_FOLDER_ID = "0AKusWfwnoNCFUk9PVA"
 OWNER_ID = "708150752"
 DOWNLOAD_DIR = "/home/username/mirror-bot/downloads"
